Fase 1 de completacion de las 4 pantallas Alex Ferrín

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -127,7 +127,7 @@ img.icon-inline {
 	}
 
 @media (max-width: 768px) {
-	.hideOnNormal {
+	.hideOnNormal:not(span) {
 		display: inline-block;
 		font-family: 'ygo';
 		font-size: 1.5em;	
