--- a/galeriaCartas/css/estilo.css
+++ b/galeriaCartas/css/estilo.css
@@ -59,8 +59,19 @@ img.product-image {
   display: none;
 }
 
+@media (orientation: landscape){
+	#imagenGrande {
+	position: fixed;
+	bottom: 10%;
+    right: 35%;
+    width: 30%;
+	border: 0;
+	display: none;
+}
+}
 
-@media (max-width: 993px) {
+
+@media (max-width: 993px) and (orientation: portrait){
 	body {
 	background-size:contain;
 }
@@ -102,7 +113,7 @@ img.product-image {
 	}
 }
 
-@media (max-width: 767px) {
+@media (max-width: 767px) and (orientation: portrait) {
 	
 	
 	.content-box:not(.follow) {
@@ -123,7 +134,7 @@ img.product-image {
 	}
 }
 
-@media (max-width: 481px) {
+@media (max-width: 481px) and (orientation: portrait){
 	
 	
 	img.product-image {
@@ -137,5 +148,127 @@ img.product-image {
 	bottom: 18%;
     right: 10%;
     width: 60%;
+}
+}
+
+@media (max-width: 481px) and (orientation: landscape){
+	
+	
+	img.product-image {
+	height: 50%;
+	width: 50%;
+	margin-left: auto;
+}
+
+#imagenGrande {
+	position: fixed;
+	bottom: 11%;
+    right: 15%;
+    width: 45%;
+}
+}
+
+@media (max-width: 767px) and (orientation: landscape) {
+	
+	
+	.content-box:not(.follow) {
+
+		margin-left: 10%;
+		margin-right: 10%;
+	}
+	
+	#imagenGrande {
+	position: fixed;
+	bottom: 11%;
+    right: 23%;
+    width: 37%;
+}
+	
+	.col-xs-2 {
+		padding: 0;
+	}
+}
+
+@media (max-width: 767px) and (orientation: landscape) and (max-height: 361px){
+	
+	
+	.content-box:not(.follow) {
+
+		margin-left: 10%;
+		margin-right: 10%;
+	}
+	
+	#imagenGrande {
+	position: fixed;
+	bottom: 12%;
+    right: 23%;
+    width: 37%;
+}
+	
+	.col-xs-2 {
+		padding: 0;
+	}
+}
+
+@media (max-width: 993px) and (orientation: landscape){
+	body {
+	background-size:contain;
+}
+
+.hideOnNormal {
+		display: initial;
+	}
+	
+	.hideOnMobile {
+		display: none;
+	}
+	
+	#imagenGrande {
+	position: fixed;
+	bottom: 10%;
+    right: 32%;
+    width: 35%;
+}
+}
+
+@media (max-width: 993px) and (orientation: landscape) and (max-height: 993px){
+	body {
+	background-size:contain;
+}
+
+.hideOnNormal {
+		display: initial;
+	}
+	
+	.hideOnMobile {
+		display: none;
+	}
+	
+	#imagenGrande {
+	position: fixed;
+	bottom: 20%;
+    right: 20%;
+    width: 40%;
+}
+}
+
+@media (max-width: 993px) and (orientation: landscape) and (max-height: 470px){
+	body {
+	background-size:contain;
+}
+
+.hideOnNormal {
+		display: initial;
+	}
+	
+	.hideOnMobile {
+		display: none;
+	}
+	
+	#imagenGrande {
+	position: fixed;
+	bottom: 10%;
+    right: 23%;
+    width: 35%;
 }
 }
