--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,7 +7,7 @@
 
 
 body {
-	background-image: url("../img/bocetowebJulio.jpg");
+	background-image: url("../img/fondo.jpg");
 	font-family: Georgia;
     /* Full height */
 
@@ -107,6 +107,12 @@ p {
 	width: 70%;
 	margin-bottom: 20pt;
 	padding: 10pt;
+}
+
+.principiante{
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 img.icon-inline {
